# snemulator

./: .gitignore  .gitmodules  Cargo.toml  aram.txt  aramprg.txt  aramprgdisassembly.s  build.rs  cgram_dump.txt  dmaregs.txt  duplicatotron3000.py  generated_func.rs  headers.txt  io_timings.txt  lang.txt  match.txt  mmioregs.txt  mod.rs  opcodes.txt  opcodes2.txt  opcodes3.txt  opcodes4.txt  out.txt  ppuregs.txt  samples.txt  scratch.py  scratch.txt  scratch2.py  scratch2.txt  scratch3.py  scratch4.py  spc700_match.txt  table.py  temp.txt  temp2.txt  vram_dump.txt
.cargo/: config.toml
.zed/: settings.json
crates/app/: Cargo.toml
crates/app/src/: app.rs  main.rs
crates/app/src/debug/: debugger.rs  mod.rs  tabs.rs  texture.rs  window.rs
crates/app/src/debug/tabs/: cpu.rs  mem.rs  ppu.rs  watchpoints.rs
crates/app/src/debug/tabs/ppu/: chr.rs  layers.rs  regs.rs  texture.rs
crates/app/src/debug/watchpoints/: editor.rs  engine.rs  interface.rs  luainclude.rs  mod.rs  snemulator_api.lua  types.rs
crates/app/src/windows/: about.rs  game.rs  menu.rs  mod.rs  settings.rs  ui_window.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  ui_window.rs
crates/devtools/: Cargo.toml
crates/devtools/compile-wps/: main.rs
crates/devtools/compile-wps/scripts/: testscript.wps  testscript0.wpb  testscript0.wps
crates/devtools/cpustatelogger/: main.rs
crates/devtools/hyperspeedtest/: main.rs
crates/devtools/speedtest/: main.rs
crates/devtools/wpscripts/: bgmode.lua  checkbrk.lua  dma_monitor.lua  hdmastuff.lua  mem_monitor.lua  monitor_mmio.lua  show_reset_state.lua  test_module.lua  testscript.lua
crates/snemcore/: Cargo.toml
crates/snemcore/src/: cartridge.rs  controller.rs  debug.rs  dma.rs  lib.rs  mod.rs  probe.rs  scpu.rs  sppu.rs  ssmp.rs  sysinfo.rs  utils.rs
crates/snemcore/src/debug/: breakpoints.rs  ppulayers.rs  watchpoints.rs
crates/snemcore/src/dma/: bus.rs  regs.rs  types.rs
crates/snemcore/src/scpu/: bus.rs  disassembler.rs  dma.rs  instructions.rs  ioregs.rs
crates/snemcore/src/sppu/: bus.rs  color.rs  regs.rs  types.rs  utils.rs
crates/snemcore/src/ssmp/: sdsp.rs  spc.rs  timers.rs
crates/snemcore/src/ssmp/sdsp/: bus.rs  regs.rs  voices.rs
crates/snemcore/src/ssmp/spc/: bus.rs  instructions.rs  ioregs.rs
crates/watchpoint-editor/: Cargo.toml
crates/watchpoint-editor/src/: main.rs
crates/watchpoint-parser/: Cargo.toml
crates/watchpoint-parser/src/: ast.rs  bytecode.rs  compiler.rs  grammar.pest  input_id.rs  lib.rs
libretro/libretro-rs/: .rustfmt.toml  Cargo.toml
libretro/libretro-rs/src/: convert.rs  lib.rs  prelude.rs
src/: app.rs  audio.rs  cartridge.rs  controller.rs  framebuf.rs  gauss.txt  header.rs  lib.rs  libretro.rs  log.rs  main.rs  utils.rs
src/app/: about_window.rs  debug.rs  debug_window.rs  egui_window.rs  main_window.rs  menu.rs  settings.rs  texture.rs  ui_window.rs  utils.rs  watchpoints.rs
src/app/debug/: tabs.rs  window.rs
src/app/watchpoints/: editor.rs  notes.rs  types.rs
src/core/: cartridge.rs  controller.rs  mod.rs  scpu.rs  snemcore.rs  sppu.rs  ssmp.rs  sysinfo.rs
src/core/scpu/: bus.rs  disassembler.rs  dissasembler.rs  dma.rs  instructions.rs  ioregs.rs  mult.rs
src/core/sppu/: bus.rs  color.rs  regs.rs  types.rs  utils.rs
src/core/ssmp/: ioports.rs  spc.rs  timers.rs
src/scpu/: instructions.rs  mod.rs  ppu.rs  scpu.rs
src/system/: cartridge.rs  instr_snapshot.txt  mod.rs  ppu.rs  scpu.rs  sppu.rs  ssmp.rs
src/system/cpu/: dma.rs  mod.rs  scpu.rs
src/system/ppu/: mod.rs  ppu.rs  utils.rs
src/system/scpu/: disassembler.rs  disassembler_match.txt  dma.rs  mult.rs  utils.rs
src/system/ssmp/: disassembler.rs  ipl_disassembly.s  sdsp.rs  spc.rs  state.rs  timer.rs  voices.rs
src/tools/: fixchecksum.py  fixchecksum_multiple.py  hexdump.rs  mod.rs  scpuasmannotater.py  scratch.py  ssmpinstrclean.py  tools.rs  vramppm.py
temp/: controller.rs  log.rs  scratch.py  scratch2.py  table.txt  temp.txt  temp2.txt  temp3.txt
temp/system/: cartridge.rs  mod.rs  scpu.rs  sppu.rs  ssmp.rs
temp/system/scpu/: instructions.rs
temp/system/sppu/: utils.rs
temp/system/ssmp/: channel.rs  (+2 more)
temp/tools/: mod.rs  scratch.py  ssmpasmannotater.py  ssmpinstrclean.py
tests/: cputest_fixed.sfc  gradient-test.sfc
tests/ppu_tests/: as.bat
tools/: fixchecksum.py  fixchecksum_multiple.py  lib.rs  linecount.py  mod.rs  run.sh
(+52 files in other folders)
