[workspace]

[package]
name = "snemulator"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
egui = "0.33.3"
egui_glow = "0.33.3"
env_logger = "0.11.9"
glow = "0.16.0"
log = "0.4.29"
paste = "1.0.15"
rfd = "0.17.2"
sdl3 = "0.17.3"

[profile.dev]
overflow-checks = false
opt-level = 2
debug = 2

[profile.release]
overflow-checks = false
opt-level = 3
lto = true
