[workspace]
members = [
    "crates/app",
    "crates/snemcore",
    "crates/devtools",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1.0.102"
rfd        = "0.17.2"
env_logger = "0.11.9"
log        = "0.4.29"

[profile.dev]
overflow-checks = false
opt-level = 2
debug = 2

[profile.release]
overflow-checks = false
opt-level = 3
lto = true