[package]
name = "snemulator"
version = "0.1.1"
edition = "2021"

[dependencies]
snemcore = { path = "../snemcore" }
egui       = "0.33.3"
egui_glow  = "0.33.3"
glow       = "0.16.0"
paste      = "1.0.15"
slotmap = "1.0"
sdl3 = {version = "0.17.3", features = ["build-from-source"]}
egui_autocomplete = "12.0.0"
rfd = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[features]
debug = []