[package]
name = "snemulator"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
snemcore = { path = "../snemcore" }
paste = "1.0.15"
slotmap = "1.0"
ringbuf = "0.4.8"
rfd = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
egui = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
sdl3 = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
toml = "1.1.2"
