[package]
name = "devtools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "speedtest"
path = "speedtest/main.rs"

[[bin]]
name = "hyperspeedtest"
path = "hyperspeedtest/main.rs"

[[bin]]
name = "compile-wps"
path = "compile-wps/main.rs"

[dependencies]
indicatif = "0.18.4"
clap = { version = "4.5", features = ["derive"] }
snemcore = { path = "../snemcore" }
watchpoint-parser = { path = "../watchpoint-parser" }
rfd = { workspace = true }
